# web3-freelance

./: .gitignore  README.md  package-lock.json  package.json
backend/: .gitignore  README.md  arbitration_schema.sql  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/arbitration/: __init__.py  arbitration_routes.py  dispute_service.py  jury_service.py  reputation_service.py
backend/app/auth/: auth_routes.py  jwt_handler.py  password_utils.py
backend/app/contracts/: contract_routes.py
backend/app/database/: db.py  init_db.py  models.py
backend/app/identity/: __init__.py  credential_issuer.py  credential_verifier.py  did_service.py
backend/app/jobs/: __init__.py  contract_routes.py  contract_service.py  job_routes.py  job_service.py
backend/app/kyc/: __init__.py  document_processor.py  kyc_routes.py  kyc_service.py
backend/app/middleware/: rbac_middleware.py
backend/app/rbac/: __init__.py  authorization.py  permissions.py  roles.py
backend/data/: app.db
contracts/cache/: solidity-files-cache.json
contracts/script/: Deploy.s.sol
contracts/src/: CrossBorderEscrow.sol  MockUSDT.sol
integration/: requirements.txt
integration/app/: config.py  database.py  main.py
memory/: MEMORY.md
prisma/: dev.db  schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AdminDashboard.tsx  ClientDashboard.tsx  ConnectWallet.tsx  Providers.tsx  ProvidersClient.tsx  WorkerDashboard.tsx  WwtLogo.tsx
src/context/: ThemeContext.tsx
src/lib/: ai.ts  auth-client.ts  auth.ts  groq.ts  (+5 more)
validator/: requirements.txt
(+96 files in other folders)
